--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
 }
 
 nav img {
-    height: 100%;
+    height: 4em;
     border-radius: 50%;
 }
 
@@ -156,7 +156,12 @@ p.author {
     background-color: #124a75;
     color: #fff;
     display: flex;
-    flex-wrap: ;
+    justify-content: space-between;
+}
+
+.info {
+    width: 45%;
+    margin-right: 1em;
 }
 
 .contact h3 {
@@ -192,9 +197,11 @@ p.author {
 }
 
 .cform input[type="submit"] {
-    background-color: #ddd;
+    background-color: #fff;
     color: #000;
-    width: 15em;
+    font-size: 1em;
+    font-weight: b;
+    width: 12em;
 }
 
 .cform textarea {
@@ -245,6 +252,10 @@ p.author {
 .projects div div p {
     font-size: 1em;
     color: #ddd;
+}
+
+.projects a {
+    text-decoration: none;
 }
 
 footer {
