--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ nav ul li{
     justify-content: center;
     padding-bottom: 4em;
     align-items: start;
+    text-align: center;
     margin: 0;
     
 }
